Validation in Lofin Page

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -90,9 +90,9 @@
     </div>
   </div>
   <div *ngIf="cartItems.length == 0" class="container">
-    <h1 class="cart-title">Oops! Nothing in cart</h1>
+    <h1 class="cart-title">Oops! Cart is empty...</h1>
     <img
-      src="../../assets/images/cart.jpg"
+      src="../../assets/cart.png"
       alt="Running Shoes"
       height="200"
       class="rounded mx-auto d-block"
