--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,39 +5,66 @@
         <div class="login-header">
           <h1>Login</h1>
         </div>
-        <form (ngSubmit)="onLogin()">
+        <form #form1="ngForm" (ngSubmit)="onLogin()">
           <div class="input-group mb-3">
             <!-- <span class="input-group-text"
               ><i class="fa-solid fa-user"></i
             ></span> -->
-            <input
-              name="username"
-              [(ngModel)]="username"
-              type="text"
-              class="form-control"
-              id="username"
-              placeholder="Username"
-              pattern="[A-Za-z]{4,}"
-              required
-            />
+            <div>
+              <input
+                name="name"
+                #fname="ngModel"
+                ngModel
+                type="text"
+                class="form-control"
+                id="name"
+                placeholder="Username"
+                minlength="3"
+                pattern="[A-Za-z]{3,}"
+                required
+              />
+            </div>
+            <div *ngIf="fname.invalid && fname.touched" class="text-danger">
+              <div *ngIf="fname.errors?.['required']">Name is required.</div>
+              <div *ngIf="fname.errors?.['minlength']">
+                Name must be at least 3 characters long.
+              </div>
+            </div>
           </div>
           <div class="input-group mb-3">
             <!-- <span class="input-group-text"><i class="fas fa-key"></i></span> -->
-            <input
-              name="password"
-              [(ngModel)]="password"
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="Password"
-              required
-            />
+            <div>
+              <input
+                name="pass"
+                #fpass="ngModel"
+                ngModel
+                type="password"
+                class="form-control"
+                id="pass"
+                placeholder="Password"
+                minlength="4"
+                pattern=".{4,}"
+                required
+              />
+            </div>
+            <div *ngIf="fpass.invalid && fpass.touched" class="text-danger">
+              <div *ngIf="fpass.errors?.['required']">
+                Please enter password.
+              </div>
+              <div *ngIf="fpass.errors?.['minlength']">
+                Password is not valid.
+              </div>
+            </div>
           </div>
           <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="rememberMe" />
             <label class="form-check-label" for="rememberMe">Remember me</label>
           </div>
-          <button type="submit" class="btn btn-primary btn-login w-100">
+          <button
+            type="submit"
+            [disabled]="form1.invalid"
+            class="btn btn-primary btn-login w-100"
+          >
             <i class="fas fa-sign-in-alt me-2"></i>Log In
           </button>
         </form>
